package com.merge.mergedatingapp.auth.dto;

import java.util.UUID;

public record userResponse(UUID userId, String email) {}
